# memory-mcp-server

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
config/: app.py  mem0.py
src/memory/mem0/: cloud_platform.py  mem0_base.py  mem0_factory.py  self_hosted.py
src/utils/: enums.py  types.py
